--- a/About Page/About.css
+++ b/About Page/About.css
@@ -577,4 +577,32 @@ footer {
     margin-right: 0.88rem;
     font-weight: 500 !important;
   }
-  
+  .container {
+    width: 100%;
+    padding: 1rem;
+    overflow-x: auto;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1rem 0;
+    font-size: 1rem;
+}
+th, td {
+    padding: 1rem;
+    border: 0.1rem solid #ccc;
+    text-align: left;
+}
+th {
+    background-color: #002D62;
+    color: #fff;
+}
+tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+tbody tr:nth-child(odd) {
+    background-color: #fff;
+}
+.bold-text {
+    font-weight: bold;
+}
