--- a/About Page/About.css
+++ b/About Page/About.css
@@ -606,3 +606,21 @@ tbody tr:nth-child(odd) {
 .bold-text {
     font-weight: bold;
 }
+.nav {
+  display: flex;  /* Aligns children in a row */
+  justify-content: flex-end; /* Aligns buttons to the right */
+  align-items: center; /* Vertically centers the buttons */
+}
+
+.nav-button {
+  margin: 0 10px;  /* Adds space between the buttons */
+}
+
+.nav a {
+  text-decoration: none;  /* Removes underline from the link */
+}
+
+.nav img {
+  width: 40px;  /* Adjust the width of your sidebar image */
+  height: auto;
+}
